--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -18,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "bothdeploy": "npm run build&&gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -26,6 +30,7 @@
       "not dead",
       "not op_mini all"
     ],
+    "homepage": "https://sushmamangalapally.github.io/MovieReviews/",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
