Add olc components

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "watch-more-films",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sushmamangalapally.github.io/MovieReviews/",
   "dependencies": {
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
@@ -18,11 +19,13 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "pretest": "npm run lint",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "bothdeploy": "npm run build&&gh-pages -d build"
+    "bothdeploy": "npm run build&&gh-pages -d build",
+    "lint": "eslint src"
   },
   "browserslist": {
     "production": [
@@ -36,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
